JI-2304 Fix license dialog overflowing sharing ui

--- a/src/components/generic/modal/Modal.scss
+++ b/src/components/generic/modal/Modal.scss
@@ -6,6 +6,8 @@
     position: relative;
     margin: 2em 3em;
     border-radius: 0.167em;
+    max-height: calc(100% - 4em);
+    overflow: auto;
   }
   .h5p-hub-modal-overlay {
     position: absolute;
